--- a/src/components/StageText/styles.css
+++ b/src/components/StageText/styles.css
@@ -1,5 +1,5 @@
 .root {
-    position: absolute;
+    display: flex;
 }
 
 
@@ -11,24 +11,22 @@
     right: 0;
 }
 .img {
-    background-size: cover;
     width: 100%;
     height: 100%;
 }
 
 .mainText {
     display: flex;
-    align-content: center;
-    position: absolute;
-    height: 40px;
-    width: 500px;
-    top: 700px;
-    padding: 5rem;
-    margin-bottom: 1rem;
+    padding: 2.1rem;
     margin-left: 40rem;
+    margin-right: 2rem;
+    max-width: 40rem;
+    max-height: 10rem;
     background-color: white;
-    color: '#000';
     opacity: 0.6;
     border-radius: 50px;
     font-size: 20px;
+    margin-top: 40rem;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
