--- a/src/components/StageText/styles.css
+++ b/src/components/StageText/styles.css
@@ -1,7 +1,7 @@
 .root {
     display: flex;
+    flex-direction: column;
 }
-
 
 .wrapper {
     position: fixed;
@@ -18,6 +18,7 @@
 .mainText {
     align-items: center;
     padding: 2rem;
+    margin-top: 43rem;
     margin-right: 2rem;
     margin-left: 2rem;
     max-height: 10rem;
@@ -25,7 +26,24 @@
     opacity: 0.6;
     border-radius: 50px;
     font-size: 20px;
-    margin-top: 45rem;
     overflow-y: auto;
     overflow-x: hidden;
+}
+
+.buttonsWrapper {
+    margin-top: 7px;
+    display: flex;
+    justify-content: center;
+}
+
+.button {
+    position: relative;
+    height: 2.5rem;
+    width: 7rem;
+    border-radius: 50px;
+    background: linear-gradient(145deg, #f0f0f0, #cacaca);
+
+}
+.button:hover {
+    background-color: yellow;
 }
