--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,8 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #e6ad00;
+  background-image: url("https://www.transparenttextures.com/patterns/textured-paper.png");
   min-height: 100vh;
   display: flex;
   flex-direction: column;
