--- a/src/components/StageAnswer/styles.css
+++ b/src/components/StageAnswer/styles.css
@@ -24,6 +24,8 @@
     font-size: 20px;
     overflow-y: auto;
     overflow-x: hidden;
+    white-space: pre-wrap;
+    line-height: 1.1em;
 }
 
 .one0 {
